2005-08-29  Yves Combe  <yves@ycombe.net>

	fix segfault is login not used. (trace fonction not well cleaned).
	add uppercase_only in use login.

	* src/boards/menu.c: (menu_pause), (menu_end), (item_event):
	* src/boards/python/login.py:

2005-08-29  Yves Combe  <yves@ycombe.net>

	Change fonts size and interline  in reading.c
	suppress filter boards from old config.
	
	* src/boards/reading.c: (start_board), (reading_create_item):
	* src/gcompris/config.c: (gcompris_config_start), (item_event_ok):

2005-08-29  Yves Combe  <yves@ycombe.net>

	finally fix this *$%@# bug in get_conf.
	fix config (bar button) bug: boards were reinitialised with board_id = 0.
	Change button order in configuration window.

	* src/boards/menu.c: (menu_pause), (menu_end), (item_event):
	* src/boards/python/login.py:
	* src/gcompris/bar.c:
	* src/gcompris/board_config.c: (gcompris_configuration_window):
	* src/gcompris/config.c: (gcompris_config_stop), (item_event_ok):
	* src/gcompris/gameutil.c: (gcompris_add_xml_to_data):
	* src/gcompris/gcompris_db.c: (gcompris_get_conf_with_table):

2005-08-28  Yves Combe,,,  <yves@ycombe.net>

	make all boards in reading configurable for locale, and use this and the global locale configuration.
	add enabling sound in conf for smallnumber (the two boards) and use locale_sound in this case.
	disable wordlist button as is not ready for the coming release
	clean login.py trace
	clean get_conf trace in gcompris_db
	add wordlist.h wordlist.c: preparation of api for getting wordlist xml files. Not used in the coming release.
	
	* src/boards/click_on_letter.c: (start_board):
	* src/boards/colors.c: (colors_config_start), (start_board):
	* src/boards/gletters.c: (start_board), (end_board), (save_table),
	(conf_ok), (check_text), (colors_config_start),
	(gletters_config_stop):
	* src/boards/imageid.c: (start_board), (end_board), (save_table),
	(conf_ok), (config_start), (config_stop):
	* src/boards/missingletter.c: (start_board), (end_board),